# stock_market

./: .gitignore  Dockerfile  README.md  docker-compose.yml  generate_dashboard.py  holdings.csv  profit_loss.md  pyproject.toml  requirements.txt  run.py  sample_portfolio.csv
.github/workflows/: daily-scan.yml  deploy-pages.yml  test-email.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/analysis/: __init__.py  dashboard_generator.py  dashboard_pipeline.py  gemini_client.py  market_intelligence.py  market_overview.py  news_aggregator.py  news_sentiment.py  newsletter.py  portfolio.py  portfolio_email.py  portfolio_insights.py  prompt_loader.py  recommendation.py  recovery.py  screener.py  technical.py
app/api/: __init__.py  routes.py
app/data/: __init__.py  fundamentals.py  google_finance_client.py  models.py  nse_client.py
app/filters/: __init__.py  rules.py
app/notification/: __init__.py  emailer.py  whatsapp.py
app/scheduler/: __init__.py  jobs.py
app/services/: __init__.py  stock_service.py
app/utils/: __init__.py  logging.py
market_dashboard/: index.html
market_dashboard/assets/css/: style.css
market_dashboard/assets/js/: main.js
market_dashboard/data/: dashboard_data.js  dashboard_data.json
prompts/: batch_analysis_prompt.txt  system_prompt.txt
